--- a/deployment-rollback/source/deployment.yaml
+++ b/deployment-rollback/source/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: my-app
   labels:
     app: my-app
+  annotations:
+    kubernetes.io/change-cause: "inital image 1.0"
+  # 배포 사유 작성
 spec:
   replicas: 5
   selector:
@@ -22,7 +25,7 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: yoonjeong/my-app:2.0
+        image: yoonjeong/my-app:1.0
         resources:
           limits:
             memory: "64Mi"
